started working on tree.  So far, in-order traversal print and insert has been made.  No balancing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
         "iostream": "cpp",
         "array": "cpp",
         "ostream": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "vector": "cpp",
+        "xstring": "cpp",
+        "ios": "cpp",
+        "xiosbase": "cpp",
+        "xutility": "cpp"
     }
 }
